替换了反射创建对象的过期方法